tests/baselines/reference/parserMemberAccessorDeclaration8.errors.txt
==== tests/cases/compiler/parserMemberAccessorDeclaration8.ts (2 errors) ====
    class C {
        static static get Foo() { }
               ~~~~~~
!!! parserMemberAccessorDeclaration8.ts(2,12): error TS1030: 'static' modifier already seen.
                          ~~~
!!! parserMemberAccessorDeclaration8.ts(2,23): error TS2126: Getters must return a value.
    }